crates/haneul-move/tests/snapshots/cli_tests__new_tests__gitignore_exists.sh.snap
---
source: crates/haneul-move/tests/cli_tests.rs
description: tests/tests/new_tests/gitignore_exists.sh
---
success: true
exit_code: 0
----- stdout -----
existing_ignore
build/*

----- stderr -----
