crates/haneul-move/tests/snapshots/cli_tests__new_tests__gitignore_has_build.sh.snap
---
source: crates/haneul-move/tests/cli_tests.rs
description: tests/tests/new_tests/gitignore_has_build.sh
---
success: true
exit_code: 0
----- stdout -----
ignore1
build/*
ignore2

==== files in example/ ====
.gitignore
Move.toml
sources
tests

----- stderr -----
