crates/haneul-move/tests/snapshots/cli_tests__new_tests__new_then_test.sh.snap
---
source: crates/haneul-move/tests/cli_tests.rs
description: tests/tests/new_tests/new_then_test.sh
---
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Haneul
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
